week-b/terraform/05-router.tf
# ----------------------------------------------------------------
# ROUTER
# ----------------------------------------------------------------

resource "google_compute_router" "router" {
  name    = "${local.name_prefix}-router"
  region  = "us-central1"
  network = google_compute_network.main.id

  bgp {
    asn = 64514
  }

  depends_on = [
    google_compute_network.main
  ]
}
